// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for default state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <div>
            <h6
              class="MuiTypography-root MuiTypography-h6 css-7s4vvs-MuiTypography-root"
            >
              Data Product
            </h6>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            />
          </div>
          <div>
            <span
              class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
              style="width: 200px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
              style="width: 100%; height: 10px; margin-top: 4px; margin-bottom: 12px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
              style="width: 100%; height: 10px; margin-top: 4px; margin-bottom: 12px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
              style="width: 125px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
            />
          </div>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Release
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            Latest released and provisional data (release: unknown)
          </p>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Sites & Positions
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Date Range
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Variables
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 250px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            x/y Axes
          </h6>
          <table
            class="MuiTable-root css-16ejogj-MuiTable-root"
          >
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
                >
                  x
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
                >
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Time step:
                    </span>
                    Auto (null)
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <div>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-7s4vvs-MuiTypography-root"
          >
            Data Product
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          />
        </div>
        <div>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 200px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 100%; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 100%; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 125px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Release
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          Latest released and provisional data (release: unknown)
        </p>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Sites & Positions
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Date Range
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Variables
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 250px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          x/y Axes
        </h6>
        <table
          class="MuiTable-root css-16ejogj-MuiTable-root"
        >
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
              >
                x
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
              >
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Time step:
                  </span>
                  Auto (null)
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for defined product with sensor / with default selection 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <div
            style="margin-right: 8px;"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
            >
              Data Product
            </h6>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
                href="https://data.neonscience.org/data-products/DP0.00000.000"
                style="font-weight: 600;"
                target="_blank"
              >
                Foo product - (DP0.00000.000)
              </a>
            </p>
          </div>
          <div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              This is a product that products
            </p>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              <b>
                Sensor:
              </b>
              <span
                style="margin-left: 4px;"
              >
                product sensor 123
              </span>
            </p>
          </div>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Release
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            Latest released and provisional data (release: unknown)
          </p>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Sites & Positions
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Date Range
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Variables
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 250px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            x/y Axes
          </h6>
          <table
            class="MuiTable-root css-16ejogj-MuiTable-root"
          >
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
                >
                  x
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
                >
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Time step:
                    </span>
                    Auto (null)
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <div
          style="margin-right: 8px;"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Data Product
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
              href="https://data.neonscience.org/data-products/DP0.00000.000"
              style="font-weight: 600;"
              target="_blank"
            >
              Foo product - (DP0.00000.000)
            </a>
          </p>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            This is a product that products
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            <b>
              Sensor:
            </b>
            <span
              style="margin-left: 4px;"
            >
              product sensor 123
            </span>
          </p>
        </div>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Release
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          Latest released and provisional data (release: unknown)
        </p>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Sites & Positions
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Date Range
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Variables
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 250px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          x/y Axes
        </h6>
        <table
          class="MuiTable-root css-16ejogj-MuiTable-root"
        >
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
              >
                x
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
              >
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Time step:
                  </span>
                  Auto (null)
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for defined product without sensor / with default selection 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <div
            style="margin-right: 8px;"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
            >
              Data Product
            </h6>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
                href="https://data.neonscience.org/data-products/DP0.00000.000"
                style="font-weight: 600;"
                target="_blank"
              >
                Foo product - (DP0.00000.000)
              </a>
            </p>
          </div>
          <div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              This is a product that products
            </p>
          </div>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Release
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            Latest released and provisional data (release: unknown)
          </p>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Sites & Positions
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Date Range
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Variables
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 250px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            x/y Axes
          </h6>
          <table
            class="MuiTable-root css-16ejogj-MuiTable-root"
          >
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
                >
                  x
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
                >
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Time step:
                    </span>
                    Auto (null)
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <div
          style="margin-right: 8px;"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Data Product
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
              href="https://data.neonscience.org/data-products/DP0.00000.000"
              style="font-weight: 600;"
              target="_blank"
            >
              Foo product - (DP0.00000.000)
            </a>
          </p>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            This is a product that products
          </p>
        </div>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Release
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          Latest released and provisional data (release: unknown)
        </p>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Sites & Positions
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Date Range
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Variables
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 250px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          x/y Axes
        </h6>
        <table
          class="MuiTable-root css-16ejogj-MuiTable-root"
        >
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
              >
                x
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
              >
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Time step:
                  </span>
                  Auto (null)
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for selection with axes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <div
            style="margin-right: 8px;"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
            >
              Data Product
            </h6>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
                href="https://data.neonscience.org/data-products/DP0.00000.000"
                style="font-weight: 600;"
                target="_blank"
              >
                Foo product - (DP0.00000.000)
              </a>
            </p>
          </div>
          <div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              This is a product that products
            </p>
          </div>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Release
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            Latest released and provisional data (release: unknown)
          </p>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Sites & Positions
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Date Range
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Variables
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 250px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            x/y Axes
          </h6>
          <table
            class="MuiTable-root css-16ejogj-MuiTable-root"
          >
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
                >
                  x
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
                >
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Time step:
                    </span>
                    30min
                  </div>
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Roll period:
                    </span>
                    5 hour
                  </div>
                </td>
              </tr>
              <tr
                class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
                >
                  y1
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
                >
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Scale:
                    </span>
                    Linear
                  </div>
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Units:
                    </span>
                    meters
                  </div>
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Range:
                    </span>
                    From Zero (0 - 36.7 meters)
                  </div>
                </td>
              </tr>
              <tr
                class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
                >
                  y2
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
                >
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Scale:
                    </span>
                    Linear
                  </div>
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Units:
                    </span>
                    degrees
                  </div>
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Range:
                    </span>
                    Centered (10 - 30 degrees)
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <div
          style="margin-right: 8px;"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Data Product
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
              href="https://data.neonscience.org/data-products/DP0.00000.000"
              style="font-weight: 600;"
              target="_blank"
            >
              Foo product - (DP0.00000.000)
            </a>
          </p>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            This is a product that products
          </p>
        </div>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Release
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          Latest released and provisional data (release: unknown)
        </p>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Sites & Positions
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Date Range
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Variables
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 250px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          x/y Axes
        </h6>
        <table
          class="MuiTable-root css-16ejogj-MuiTable-root"
        >
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
              >
                x
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
              >
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Time step:
                  </span>
                  30min
                </div>
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Roll period:
                  </span>
                  5 hour
                </div>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
              >
                y1
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
              >
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Scale:
                  </span>
                  Linear
                </div>
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Units:
                  </span>
                  meters
                </div>
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Range:
                  </span>
                  From Zero (0 - 36.7 meters)
                </div>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
              >
                y2
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
              >
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Scale:
                  </span>
                  Linear
                </div>
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Units:
                  </span>
                  degrees
                </div>
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Range:
                  </span>
                  Centered (10 - 30 degrees)
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for selection with only date range 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <div
            style="margin-right: 8px;"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
            >
              Data Product
            </h6>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
                href="https://data.neonscience.org/data-products/DP0.00000.000"
                style="font-weight: 600;"
                target="_blank"
              >
                Foo product - (DP0.00000.000)
              </a>
            </p>
          </div>
          <div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              This is a product that products
            </p>
          </div>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Release
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            Latest released and provisional data (release: unknown)
          </p>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Sites & Positions
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Date Range
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            Apr 2018 - Jan 2020 (1 year, 10 months)
          </p>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Variables
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 250px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            x/y Axes
          </h6>
          <table
            class="MuiTable-root css-16ejogj-MuiTable-root"
          >
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
                >
                  x
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
                >
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Time step:
                    </span>
                    Auto (null)
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <div
          style="margin-right: 8px;"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Data Product
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
              href="https://data.neonscience.org/data-products/DP0.00000.000"
              style="font-weight: 600;"
              target="_blank"
            >
              Foo product - (DP0.00000.000)
            </a>
          </p>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            This is a product that products
          </p>
        </div>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Release
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          Latest released and provisional data (release: unknown)
        </p>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Sites & Positions
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Date Range
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          Apr 2018 - Jan 2020 (1 year, 10 months)
        </p>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Variables
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 250px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          x/y Axes
        </h6>
        <table
          class="MuiTable-root css-16ejogj-MuiTable-root"
        >
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
              >
                x
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
              >
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Time step:
                  </span>
                  Auto (null)
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for selection with only sites 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <div
            style="margin-right: 8px;"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
            >
              Data Product
            </h6>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
                href="https://data.neonscience.org/data-products/DP0.00000.000"
                style="font-weight: 600;"
                target="_blank"
              >
                Foo product - (DP0.00000.000)
              </a>
            </p>
          </div>
          <div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              This is a product that products
            </p>
          </div>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Release
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            Latest released and provisional data (release: unknown)
          </p>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Sites & Positions
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            ABBY - 000.010, 000.020
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            BARR - 000.030
          </p>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Date Range
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Variables
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 250px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            x/y Axes
          </h6>
          <table
            class="MuiTable-root css-16ejogj-MuiTable-root"
          >
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
                >
                  x
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
                >
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Time step:
                    </span>
                    Auto (null)
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <div
          style="margin-right: 8px;"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Data Product
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
              href="https://data.neonscience.org/data-products/DP0.00000.000"
              style="font-weight: 600;"
              target="_blank"
            >
              Foo product - (DP0.00000.000)
            </a>
          </p>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            This is a product that products
          </p>
        </div>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Release
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          Latest released and provisional data (release: unknown)
        </p>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Sites & Positions
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          ABBY - 000.010, 000.020
        </p>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          BARR - 000.030
        </p>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Date Range
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Variables
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 250px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          x/y Axes
        </h6>
        <table
          class="MuiTable-root css-16ejogj-MuiTable-root"
        >
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
              >
                x
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
              >
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Time step:
                  </span>
                  Auto (null)
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for selection with only variables 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <div
            style="margin-right: 8px;"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
            >
              Data Product
            </h6>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
                href="https://data.neonscience.org/data-products/DP0.00000.000"
                style="font-weight: 600;"
                target="_blank"
              >
                Foo product - (DP0.00000.000)
              </a>
            </p>
          </div>
          <div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              This is a product that products
            </p>
          </div>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Release
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            Latest released and provisional data (release: unknown)
          </p>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Sites & Positions
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Date Range
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Variables
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            var1, var2
          </p>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            x/y Axes
          </h6>
          <table
            class="MuiTable-root css-16ejogj-MuiTable-root"
          >
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
                >
                  x
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
                >
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Time step:
                    </span>
                    Auto (null)
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <div
          style="margin-right: 8px;"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Data Product
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
              href="https://data.neonscience.org/data-products/DP0.00000.000"
              style="font-weight: 600;"
              target="_blank"
            >
              Foo product - (DP0.00000.000)
            </a>
          </p>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            This is a product that products
          </p>
        </div>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Release
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          Latest released and provisional data (release: unknown)
        </p>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Sites & Positions
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Date Range
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Variables
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          var1, var2
        </p>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          x/y Axes
        </h6>
        <table
          class="MuiTable-root css-16ejogj-MuiTable-root"
        >
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
              >
                x
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
              >
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Time step:
                  </span>
                  Auto (null)
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for selection with variables and qualityFlags 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <div
            style="margin-right: 8px;"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
            >
              Data Product
            </h6>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
                href="https://data.neonscience.org/data-products/DP0.00000.000"
                style="font-weight: 600;"
                target="_blank"
              >
                Foo product - (DP0.00000.000)
              </a>
            </p>
          </div>
          <div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
            >
              This is a product that products
            </p>
          </div>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Release
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            Latest released and provisional data (release: unknown)
          </p>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Sites & Positions
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Date Range
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
            style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
          />
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Variables
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            var1, var2
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            Quality flags: qfA, qfB, qfC
          </p>
        </div>
        <div
          class="css-yy92n4-summaryDiv"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            x/y Axes
          </h6>
          <table
            class="MuiTable-root css-16ejogj-MuiTable-root"
          >
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
                >
                  x
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
                >
                  <div
                    style="margin-right: 16px; white-space: nowrap;"
                  >
                    <span
                      class="css-9xfsnc-axisSettingTitle"
                    >
                      Time step:
                    </span>
                    Auto (null)
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <div
          style="margin-right: 8px;"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
          >
            Data Product
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-pkumts-MuiTypography-root-MuiLink-root"
              href="https://data.neonscience.org/data-products/DP0.00000.000"
              style="font-weight: 600;"
              target="_blank"
            >
              Foo product - (DP0.00000.000)
            </a>
          </p>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
          >
            This is a product that products
          </p>
        </div>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Release
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          Latest released and provisional data (release: unknown)
        </p>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Sites & Positions
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 175px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Date Range
        </h6>
        <span
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
          style="width: 300px; height: 10px; margin-top: 4px; margin-bottom: 12px;"
        />
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          Variables
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          var1, var2
        </p>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1t0tnib-MuiTypography-root"
        >
          Quality flags: qfA, qfB, qfC
        </p>
      </div>
      <div
        class="css-yy92n4-summaryDiv"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ysyssv-MuiTypography-root"
        >
          x/y Axes
        </h6>
        <table
          class="MuiTable-root css-16ejogj-MuiTable-root"
        >
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-1s6vu4h-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-rggbuo-MuiTableCell-root-axisTitle"
              >
                x
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-ffzs38-MuiTableCell-root-axisSettings"
              >
                <div
                  style="margin-right: 16px; white-space: nowrap;"
                >
                  <span
                    class="css-9xfsnc-axisSettingTitle"
                  >
                    Time step:
                  </span>
                  Auto (null)
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
